...
  <string name="mobimon_luna_description">Luna 고양이</string>
  <string name="mobimon_source_simulated">시뮬레이션</string>
  <string name="mobimon_source_real">실제 차량 데이터</string>
  <string name="mobimon_points_balance">포인트 %1$,d P</string>
  <string name="mobimon_points_loading">포인트 확인 중</string>
  <string name="mobimon_points_failed">포인트를 확인할 수 없어요</string>
    <string name="mobimon_back">뒤로</string>
    <string name="mobimon_home">홈으로</string>
  <string name="mobimon_parking_confirmed">주차 확인됨</string>
  <string name="mobimon_parking_unconfirmed">주차 확인 불가</string>
  <string name="mobimon_parking_restricted">주차 후 이용</string>
    <string name="mobimon_departure_surprise">앗 출발해?</string>
    <string name="mobimon_las_departure">I\'ll be back.</string>
    <string name="mobimon_las_description">손을 흔드는 로봇 친구 라스</string>
    <string name="pet_scene_lake_park_name">호수 공원</string>
...
